[package]
authors = ["Alex Davidson <coela@alxdavids.xyz>"]
categories = ["cryptography", "no-std"]
description = "Safe, fast, small crypto using Rust."
edition = "2018"
keywords = ["crypto", "cryptography", "rand", "ECC", "RSA"]
license-file = "LICENSE"
name = "ecc-rs"
repository = "https://github.com/alxdavids/ecc-rs"
version = "0.0.1"

[lib]
name = "ecc_rs"

[dependencies]
untrusted = { version = "0.7.0" }
num = "0.2.1"
num-bigint = "0.2.5"
num-traits = "0.2.11"
hex = "0.4.0"
subtle = "2.2.2"
hkdf-sha512 = {path="hkdf-sha512"}
ring-ecc = {path="ring-ecc"}